--- a/style.html
+++ b/style.html
@@ -11,6 +11,7 @@
  <p>きょうは<span style="color:red;">よい</span>天気</p>
 
   <p>きょうは<span>よい</span>天気</p>
-  
+ 
+  <p>きょうは<em>よい</em>天気</p>
 </body>
 </html>
