--- a/table.html
+++ b/table.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html>
+<html lang="ja">
+ <head>
+   <title>Table</title>
+   <link rel="stylesheet" href="style.css">
+ </head> 
+<body>
+  <table>
+    <caption>簡潔な説明</caption>
+    <tr><th>項目</th><th>内容</th></tr>
+    <tr><tb>項目1</tb><tb>内容1</tb></tr>
+    <tr><tb>項目2</tb><tb>内容2</tb></tr>
+  </table>
+</body>
+</html>
